[gd_scene load_steps=29 format=3 uid="uid://be4kmjavgki6v"]

[ext_resource type="Script" path="res://scripts/scorpion.gd" id="1_njb0n"]
[ext_resource type="Shader" uid="uid://ba4x50f4o2nba" path="res://shaders/blink.tres" id="2_mew0e"]
[ext_resource type="Texture2D" uid="uid://bgjtthhhnlfx2" path="res://assets/sprites/enemies/scorpion/scorpion attack sheet.png" id="3_turmy"]
[ext_resource type="Texture2D" uid="uid://de5y51ndl7tj0" path="res://assets/sprites/enemies/scorpion/scorpion_fall.png" id="4_75tlt"]
[ext_resource type="Texture2D" uid="uid://bg5gvyjker4v0" path="res://assets/sprites/enemies/scorpion/scorpion_idle_sheet.png" id="4_i6bxk"]
[ext_resource type="Texture2D" uid="uid://cro3d3ddlbcdv" path="res://assets/sprites/enemies/scorpion/scorpion_run_sheet.png" id="5_fobkt"]
[ext_resource type="PackedScene" uid="uid://honmn2s1smfo" path="res://scenes/enemies/enemy_healthbar.tscn" id="8_0jott"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ji213"]
resource_local_to_scene = true
shader = ExtResource("2_mew0e")
shader_parameter/enabled = false
shader_parameter/tint = Color(1, 1, 1, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_g8uuc"]
atlas = ExtResource("3_turmy")
region = Rect2(0, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qwkbh"]
atlas = ExtResource("3_turmy")
region = Rect2(48, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_u6pdd"]
atlas = ExtResource("3_turmy")
region = Rect2(96, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vsa26"]
atlas = ExtResource("3_turmy")
region = Rect2(144, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xytj5"]
atlas = ExtResource("3_turmy")
region = Rect2(192, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ojm2k"]
atlas = ExtResource("4_i6bxk")
region = Rect2(0, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xcm5h"]
atlas = ExtResource("4_i6bxk")
region = Rect2(48, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_e0lsn"]
atlas = ExtResource("4_i6bxk")
region = Rect2(96, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_onujm"]
atlas = ExtResource("4_i6bxk")
region = Rect2(144, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_h8asa"]
atlas = ExtResource("5_fobkt")
region = Rect2(0, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0opjw"]
atlas = ExtResource("5_fobkt")
region = Rect2(48, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_l4fv1"]
atlas = ExtResource("5_fobkt")
region = Rect2(96, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2qb7l"]
atlas = ExtResource("5_fobkt")
region = Rect2(144, 0, 48, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_47d34"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_g8uuc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qwkbh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u6pdd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vsa26")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xytj5")
}],
"loop": false,
"name": &"attack",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_75tlt")
}],
"loop": true,
"name": &"fall",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ojm2k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xcm5h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e0lsn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_onujm")
}],
"loop": true,
"name": &"idle",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_h8asa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0opjw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l4fv1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2qb7l")
}],
"loop": true,
"name": &"run",
"speed": 8.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_fhnb5"]
radius = 8.0

[sub_resource type="CircleShape2D" id="CircleShape2D_5jea4"]
radius = 96.0

[sub_resource type="Animation" id="Animation_37y7c"]
length = 0.02
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedScorpionSprite:material:shader_parameter/enabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedScorpionSprite:material:shader_parameter/tint")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_7ssvu"]
resource_name = "blink"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedScorpionSprite:material:shader_parameter/enabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedScorpionSprite:material:shader_parameter/tint")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_8rcyp"]
resource_name = "hurt_blink"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedScorpionSprite:material:shader_parameter/enabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedScorpionSprite:material:shader_parameter/tint")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Color(0.92549, 0.152941, 0.247059, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_31xmi"]
_data = {
"RESET": SubResource("Animation_37y7c"),
"blink": SubResource("Animation_7ssvu"),
"hurt_blink": SubResource("Animation_8rcyp")
}

[node name="scorpion" type="CharacterBody2D" groups=["enemies"]]
z_index = 4
collision_layer = 8
collision_mask = 16
script = ExtResource("1_njb0n")

[node name="AnimatedScorpionSprite" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_ji213")
position = Vector2(0, -16)
sprite_frames = SubResource("SpriteFrames_47d34")
animation = &"idle"
autoplay = "idle"

[node name="ScorpionCollider" type="CollisionShape2D" parent="."]
position = Vector2(0, -8)
rotation = 1.5708
shape = SubResource("CircleShape2D_fhnb5")

[node name="RayCastRight" type="RayCast2D" parent="."]
position = Vector2(0, -8)
target_position = Vector2(12, 0)
collision_mask = 16

[node name="RayCastLeft" type="RayCast2D" parent="."]
position = Vector2(0, -8)
target_position = Vector2(-12, 0)
collision_mask = 16

[node name="ChasePlayer" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 2

[node name="DetectionCollider" type="CollisionShape2D" parent="ChasePlayer"]
shape = SubResource("CircleShape2D_5jea4")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
deterministic = true
reset_on_save = false
libraries = {
"": SubResource("AnimationLibrary_31xmi")
}

[node name="RoamTimer" type="Timer" parent="."]
unique_name_in_owner = true

[node name="CooldownTimer" type="Timer" parent="."]
unique_name_in_owner = true
one_shot = true

[node name="enemy_healthbar" parent="." instance=ExtResource("8_0jott")]
position = Vector2(0, -24)

[node name="PoisonBallMarker" type="Marker2D" parent="."]
position = Vector2(0, -20)

[connection signal="animation_finished" from="AnimatedScorpionSprite" to="." method="_on_animated_scorpion_sprite_animation_finished"]
[connection signal="body_entered" from="ChasePlayer" to="." method="_on_chase_player_body_entered"]
[connection signal="body_exited" from="ChasePlayer" to="." method="_on_chase_player_body_exited"]
[connection signal="timeout" from="RoamTimer" to="." method="_on_change_state_timer_timeout"]
[connection signal="timeout" from="CooldownTimer" to="." method="_on_cooldown_timer_timeout"]
